LTE 2.1.0: heterogeneous CPU/GPU scheduler, stress-tested pipeline